python-querierd: test

--- a/python-querierd/Makefile
+++ b/python-querierd/Makefile
@@ -53,14 +53,10 @@ define Build/Prepare
 endef
 
 define Package/python-querierd/install
+	$(call PyPackage/python-querierd/install)
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/querierd.init $(1)/etc/init.d/querierd
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/etc/querierd $(1)/etc/
-
-	$(INSTALL_DIR) $(1)$(PYTHON_PKG_DIR)
-	$(CP) \
-		$(PKG_INSTALL_DIR)$(PYTHON_PKG_DIR)/* \
-		$(1)$(PYTHON_PKG_DIR)
 endef
 
 $(eval $(call PyPackage,python-querierd))
