--- a/python-querierd/Makefile
+++ b/python-querierd/Makefile
@@ -52,13 +52,23 @@ define Build/Prepare
 	$(Build/Patch)
 endef
 
+define Build/Compile
+	$(call Build/Compile/PyMod,,\
+		install --prefix="/usr" --root="$(PKG_INSTALL_DIR)" \
+	)
+endef
+
 define Package/python-querierd/install
-	$(call PyPackage/python-querierd/install)
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/querierd.init $(1)/etc/init.d/querierd
 	$(INSTALL_DATA) $(PKG_BUILD_DIR)/etc/querierd $(1)/etc/
+
+	$(INSTALL_DIR) $(1)$(PYTHON_PKG_DIR)
+	$(CP) \
+		$(PKG_INSTALL_DIR)$(PYTHON_PKG_DIR)/* \
+		$(1)$(PYTHON_PKG_DIR)
 endef
 
-$(eval $(call PyPackage,python-querierd))
+#$(eval $(call PyPackage,python-querierd))
 $(eval $(call BuildPackage,python-querierd))
 #$(eval $(call BuildPackage,python-querierd-src))
