--- a/querierd/Makefile
+++ b/querierd/Makefile
@@ -21,7 +21,7 @@ PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=LICENSE
 
 include $(INCLUDE_DIR)/package.mk
-#include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
+include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
 $(call include_mk, python-package.mk)
 
 define Package/querierd
