--- a/python-netifaces/Makefile
+++ b/python-netifaces/Makefile
@@ -24,10 +24,13 @@ PKG_BUILD_DEPENDS:=PACKAGE_python-netifaces:python \
                    PACKAGE_python3-netifaces:python3-setuptools
 
 include $(INCLUDE_DIR)/package.mk
+ifeq ($(CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_OPENWRT),y)
 include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
 include $(TOPDIR)/feeds/packages/lang/python/python3-package.mk
+else
 $(call include_mk, python-package.mk)
 $(call include_mk, python3-package.mk)
+endif
 
 PKG_UNPACK:=$(HOST_TAR) -C $(PKG_BUILD_DIR) --strip-components=1 -xzf $(DL_DIR)/$(PKG_SOURCE)
 
