--- a/python-netifaces/Makefile
+++ b/python-netifaces/Makefile
@@ -18,18 +18,20 @@ PKG_MAINTAINER:=Hirokazu MORIKAWA <morikw2@gmail.com>
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(BUILD_VARIANT)-$(PKG_NAME)-$(PKG_VERSION)
 
+ifdef CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_LEDE
 PKG_BUILD_DEPENDS:=PACKAGE_python-netifaces:python \
                    PACKAGE_python-netifaces:python-setuptools \
                    PACKAGE_python3-netifaces:python \
                    PACKAGE_python3-netifaces:python3-setuptools
+endif
 
 include $(INCLUDE_DIR)/package.mk
-ifeq ($(CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_OPENWRT),y)
-include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
-include $(TOPDIR)/feeds/packages/lang/python/python3-package.mk
-else
+ifdef CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_LEDE
 $(call include_mk, python-package.mk)
 $(call include_mk, python3-package.mk)
+else
+include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
+include $(TOPDIR)/feeds/packages/lang/python/python3-package.mk
 endif
 
 PKG_UNPACK:=$(HOST_TAR) -C $(PKG_BUILD_DIR) --strip-components=1 -xzf $(DL_DIR)/$(PKG_SOURCE)
