--- a/querierd/Makefile
+++ b/querierd/Makefile
@@ -21,10 +21,10 @@ PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=LICENSE
 
 include $(INCLUDE_DIR)/package.mk
-ifeq ($(CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_OPENWRT),y)
-include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
-else
+ifdef CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_LEDE
 $(call include_mk, python-package.mk)
+else
+include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
 endif
 
 define Package/querierd
