--- a/python-netifaces/Makefile
+++ b/python-netifaces/Makefile
@@ -31,8 +31,8 @@ else
   PYTHON_MK_PATH:=python
 endif
 include $(INCLUDE_DIR)/package.mk
-include $(TOPDIR)/feeds/packages/lang/$(PYTHON_MK_PATH)/python-package.mk
-include $(TOPDIR)/feeds/packages/lang/$(PYTHON_MK_PATH)/python3-package.mk
+include $(TOPDIR)/feeds/packages/lang/$(CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_LEDE)/python-package.mk
+include $(TOPDIR)/feeds/packages/lang/$(CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_OPENWRT)/python3-package.mk
 
 PKG_UNPACK:=$(HOST_TAR) -C $(PKG_BUILD_DIR) --strip-components=1 -xzf $(DL_DIR)/$(PKG_SOURCE)
 
