--- a/python-netifaces/Makefile
+++ b/python-netifaces/Makefile
@@ -20,6 +20,7 @@ PKG_BUILD_DIR:=$(BUILD_DIR)/$(BUILD_VARIANT)-$(PKG_NAME)-$(PKG_VERSION)
 
 $(info lede $(CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_LEDE))
 $(info musl $(CONFIG_USE_MUSL))
+$(info dir $(TOPDIR))
 ifdef CONFIG_BUSYBOX_DEFAULT_NSLOOKUP_LEDE
 PKG_BUILD_DEPENDS:=PACKAGE_python-netifaces:python \
                    PACKAGE_python-netifaces:python-setuptools \
