mg: https://devio.us/~bcallah/mg/ is temporarily offline

--- a/mg/Makefile
+++ b/mg/Makefile
@@ -6,10 +6,11 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=mg
 PKG_VERSION:=20180421
-PKG_RELEASE:=1
+PKG_RELEASE:=2
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://devio.us/~bcallah/mg/
+# PKG_SOURCE_URL:=https://devio.us/~bcallah/mg/ is temporarily offline
+PKG_SOURCE_URL:=https://dl.bintray.com/homebrew/mirror/
 PKG_HASH:=11215613a360cf72ff16c2b241ea4e71b4b80b2be32c62a770c1969599e663b2
 
 PKG_MAINTAINER:=Hirokazu MORIKAWA <morikw2@gmail.com>
