--- a/python-netifaces/Makefile
+++ b/python-netifaces/Makefile
@@ -5,12 +5,12 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=netifaces
-PKG_VERSION:=0.10.6
+PKG_VERSION:=0.10.7
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://pypi.python.org/packages/72/01/ba076082628901bca750bf53b322a8ff10c1d757dc29196a8e6082711c9d
-PKG_HASH:=0c4da523f36d36f1ef92ee183f2512f3ceb9a9d2a45f7d19cda5a42c6689ebe0
+PKG_SOURCE_URL:=https://files.pythonhosted.org/packages/81/39/4e9a026265ba944ddf1fea176dbb29e0fe50c43717ba4fcf3646d099fe38
+PKG_HASH:=bd590fcb75421537d4149825e1e63cca225fd47dad861710c46bd1cb329d8cbd
 
 PKG_LICENSE:=MIT
 PKG_LICENSE_FILES:=README.rst
