--- a/mg/Makefile
+++ b/mg/Makefile
@@ -11,6 +11,7 @@ PKG_RELEASE:=1
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://codeload.github.com/ibara/mg/tar.gz/$(PKG_NAME)-$(PKG_VERSION)?
 PKG_HASH:=6121eb373b8fd5a6166522c7f47158decc3ea5c219788c723a8d8c43c22f85ae
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(PKG_NAME)-$(PKG_VERSION)
 
 PKG_MAINTAINER:=Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=PUBLICDOMAIN ISC BSD VARIOUS
