--- a/mg/Makefile
+++ b/mg/Makefile
@@ -9,8 +9,8 @@ PKG_VERSION:=20180927
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://codeload.github.com/hboetes/mg/tar.gz/$(PKG_VERSION)?
-PKG_HASH:=fbb09729ea00fe42dcdbc96ac7fc1d2b89eac651dec49e4e7af52fad4f5788f6
+PKG_SOURCE_URL:=https://codeload.github.com/ibara/mg/tar.gz/$(PKG_VERSION)?
+PKG_HASH:=99b2fd2cf9d6474153d6c5769c818dd5514c147b8a8ad660a5e114bc1ebd504d
 
 PKG_MAINTAINER:=Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=PUBLICDOMAIN ISC BSD VARIOUS
@@ -21,9 +21,9 @@ include $(INCLUDE_DIR)/package.mk
 define Package/mg
   SECTION:=utils
   CATEGORY:=Utilities
-  DEPENDS:=+libncurses +libpcre +libbsd
+  DEPENDS:=+libncurses +libpcre
   TITLE:=microscopic EMACS style editor
-  URL:=https://github.com/hboetes/mg
+  URL:=https://github.com/ibara/mg
   SUBMENU:=Editors
 endef
 
@@ -32,16 +32,6 @@ define Package/mg/description
  can't (or don't want to) run emacs for one reason or another, or are not
  familiar with the vi editor. It is compatible with emacs because there
  shouldn't be any reason to learn more editor types than emacs or vi.
-endef
-
-TARGET_CFLAGS+= -D_GNU_SOURCE -isystem $(STAGING_DIR)/usr/include/bsd -DLIBBSD_OVERLAY -DREGEX
-
-define Build/Compile
-	$(MAKE) prefix=/usr -C $(PKG_BUILD_DIR) \
-		LDFLAGS="$(TARGET_LDFLAGS)" \
-		LIBS="-lncurses -lpcre -lbsd" \
-		CFLAGS="$(TARGET_CFLAGS)" \
-		CC="$(TARGET_CC)"
 endef
 
 define Package/mg/install
