--- a/mg/Makefile
+++ b/mg/Makefile
@@ -9,8 +9,8 @@ PKG_VERSION:=20180927
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://codeload.github.com/ibara/mg/tar.gz/$(PKG_NAME)-$(PKG_VERSION)?
-PKG_HASH:=99b2fd2cf9d6474153d6c5769c818dd5514c147b8a8ad660a5e114bc1ebd504d
+PKG_SOURCE_URL:=https://github.com/ibara/mg/releases/download/mg-20180927
+PKG_HASH:=6121eb373b8fd5a6166522c7f47158decc3ea5c219788c723a8d8c43c22f85ae
 
 PKG_MAINTAINER:=Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=PUBLICDOMAIN ISC BSD VARIOUS
