--- a/v2ray-plugin/Makefile
+++ b/v2ray-plugin/Makefile
@@ -28,6 +28,7 @@ include ../../lang/golang/golang-package.mk
 define Package/v2ray-plugin
   SECTION:=net
   CATEGORY:=Network
+  SUBMENU:=Web Servers/Proxies
   TITLE:=SIP003 plugin for shadowsocks, based on v2ray
   URL:=https://github.com/shadowsocks/v2ray-plugin
   DEPENDS:=$(GO_ARCH_DEPENDS)
