--- a/python-RPi.GPIO/Makefile
+++ b/python-RPi.GPIO/Makefile
@@ -20,6 +20,9 @@ include $(INCLUDE_DIR)/package.mk
 include $(TOPDIR)/feeds/packages/lang/python/python-package.mk
 include $(TOPDIR)/feeds/packages/lang/python/python3-package.mk
 
+PYTHON_PKG_SETUP_ARGS:=
+PYTHON3_PKG_SETUP_ARGS:=
+
 define Package/python-RPi.GPIO/Default
   SECTION:=lang
   CATEGORY:=Languages
