querierd: change missing repo

--- a/querierd/Makefile
+++ b/querierd/Makefile
@@ -13,7 +13,7 @@ PKG_SOURCE_URL:=https://github.com/nxhack/querierd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=167eb2fec2936ea6e75836fdeaae2771ae7c8d3c
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-#PKG_MIRROR_HASH:=dba4f0605ab83be330bda6c19683287ed21fac9d7f2be6bbdfcbd237bea9a8f0
+PKG_MIRROR_HASH:=3ec425362edb7026d269e5719f3adf16f55d8534c3267e22345348f18eb17131
 
 #PKG_BRANCH:=afa077c36c02
 #PKG_SOURCE:=$(PKG_BRANCH).zip
