--- a/querierd/Makefile
+++ b/querierd/Makefile
@@ -26,8 +26,11 @@ PKG_MAINTAINER:=Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=GPL-2.0
 PKG_LICENSE_FILES:=LICENSE
 
+PYTHON3_PKG_BUILD:=0
+
+include ../../packages/lang/python/pypi.mk
 include $(INCLUDE_DIR)/package.mk
-include $(TOPDIR)/feeds/packages/lang/python/python3-package.mk
+include ../../packages/lang/python/python3-package.mk
 
 define Package/querierd
   SECTION:=net
