add new packages swig,libmraa,libupm

--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -33,7 +33,7 @@ PKG_USE_MIPS16:=0
 PYTHON3_PKG_BUILD:=0
 
 include $(INCLUDE_DIR)/package.mk
-include ../../packages/devel/ninja/ninja-cmake.mk
+#include ../../packages/devel/ninja/ninja-cmake.mk
 include ../../packages/lang/python/python3-package.mk
 
 UPM_MODULES:= \
