--- a/swig/Makefile
+++ b/swig/Makefile
@@ -31,6 +31,7 @@ HOST_BUILD_PARALLEL:=1
 
 include $(INCLUDE_DIR)/host-build.mk
 include $(INCLUDE_DIR)/package.mk
+include $(INCLUDE_DIR)/nls.mk
 
 define Package/swig
   SECTION:=libs
