--- a/swig/Makefile
+++ b/swig/Makefile
@@ -27,6 +27,7 @@ PKG_LICENSE_FILES:=LICENSE
 
 PKG_HOST_ONLY:=1
 PKG_FIXUP:=autoreconf
+PKG_FIXUP:=patch-libtool
 HOST_BUILD_PARALLEL:=1
 
 include $(INCLUDE_DIR)/host-build.mk
