--- a/swig/Makefile
+++ b/swig/Makefile
@@ -26,7 +26,7 @@ PKG_LICENSE:=GPL-3.0-or-later
 PKG_LICENSE_FILES:=LICENSE
 
 PKG_HOST_ONLY:=1
-PKG_FIXUP:=autoreconf
+PKG_FIXUP:=libtool
 PKG_FIXUP:=patch-libtool
 HOST_BUILD_PARALLEL:=1
 
