--- a/swig/Makefile
+++ b/swig/Makefile
@@ -26,8 +26,6 @@ PKG_LICENSE:=GPL-3.0-or-later
 PKG_LICENSE_FILES:=LICENSE
 
 PKG_HOST_ONLY:=1
-PKG_REMOVE_FILES:=autogen.sh
-PKG_FIXUP:=autoreconf
 HOST_BUILD_PARALLEL:=1
 
 include $(INCLUDE_DIR)/host-build.mk
@@ -47,6 +45,11 @@ HOST_CONFIGURE_ARGS += \
 
 define Package/swig/description
   tool that generates bindings for various languages
+endef
+
+define Build/Configure
+	(cd $(PKG_BUILD_DIR); ./autogen.sh );
+	$(call Build/Configure/Default)
 endef
 
 $(eval $(call HostBuild))
