swig: use autogen.sh

--- a/swig/Makefile
+++ b/swig/Makefile
@@ -25,6 +25,7 @@ PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gm
 PKG_LICENSE:=GPL-3.0-or-later
 PKG_LICENSE_FILES:=LICENSE
 
+PKG_FIXUP:=autoreconf
 PKG_HOST_ONLY:=1
 HOST_BUILD_PARALLEL:=1
 
