--- a/libmraa/Makefile
+++ b/libmraa/Makefile
@@ -21,7 +21,7 @@ PKG_SOURCE_URL:=https://github.com/eclipse/mraa.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=833bac569c5fae2905fd6f6abc90c86c784b904c
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-#PKG_MIRROR_HASH:=3ec425362edb7026d269e5719f3adf16f55d8534c3267e22345348f18eb17131
+PKG_MIRROR_HASH:=a63e03a1b4c96c54ad0bd5f4ae627b2c288ca645045a671faa6ea049c8180a40
 
 PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=MIT
