--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -34,6 +34,7 @@ PYTHON3_PKG_BUILD:=0
 
 include $(INCLUDE_DIR)/package.mk
 #include ../../packages/devel/ninja/ninja-cmake.mk
+include $(INCLUDE_DIR)/cmake.mk
 include ../../packages/lang/python/python3-package.mk
 
 UPM_MODULES:= \
