--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -62,6 +62,8 @@ UPM_MODULES:= \
 
 CMAKE_OPTIONS += \
 	-DBUILDSWIGNODE=$(if $(CONFIG_PACKAGE_libmraa-node),ON,OFF) \
+	-DSWIG_EXECUTABLE=$(STAGING_DIR_HOSTPKG)/bin/swig \
+	-DSWIG_DIR=$(STAGING_DIR_HOSTPKG)/share/swig \
 	-DPYTHON2LIBS_FOUND=FALSE \
 	-DPYTHON2INTERP_FOUND=FALSE \
 
