--- a/swig/Makefile
+++ b/swig/Makefile
@@ -19,7 +19,7 @@ PKG_SOURCE_URL:=https://github.com/swig/swig.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=429288fa1c753dcb2d34f363e51c3b924ac173bb
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-#PKG_MIRROR_HASH:=fbe85c489f4b833e58c88e2e1f2d3e762f01a6d25e28ff99a1db5fbbdc31999e
+PKG_MIRROR_HASH:=7b939b655f4a3b6d4532a58a817bed787a3971f370eb4812b8356e60a81c8a37
 
 PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=GPL-3.0-or-later
