--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -21,7 +21,7 @@ PKG_SOURCE_URL:=https://github.com/eclipse/upm.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=3f7dcc6e0b730ad5d12a17e5465de44555aa20ab
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-#PKG_MIRROR_HASH:=3ec425362edb7026d269e5719f3adf16f55d8534c3267e22345348f18eb17131
+PKG_MIRROR_HASH:=5d7eac720d01421f40b4d53eff2f6426bc0e9c33c431704f88dc43fe757453ed
 
 PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=MIT
