--- a/libmraa/Makefile
+++ b/libmraa/Makefile
@@ -29,6 +29,7 @@ PKG_LICENSE_FILES:=COPYING
 
 PKG_BUILD_DEPENDS:=swig/host node/host PACKAGE_node:node
 CMAKE_INSTALL:=1
+CMAKE_BINARY_SUBDIR:=build
 PKG_USE_MIPS16:=0
 PYTHON3_PKG_BUILD:=0
 
