--- a/swig/Makefile
+++ b/swig/Makefile
@@ -42,7 +42,7 @@ endef
 
 HOST_CONFIGURE_ARGS += \
 	--with-jsv8inc=$(STAGING_DIR_HOSTPKG)/include/node \
-	--with-python=$(STAGING_DIR_HOSTPKG)/bin/python \
+	--with-python=$(STAGING_DIR_HOSTPKG)/bin/python3 \
 	--with-python3=$(STAGING_DIR_HOSTPKG)/bin/python3 \
 	--without-pcre \
 	--without-tcl \
