--- a/swig/Makefile
+++ b/swig/Makefile
@@ -17,9 +17,9 @@ PKG_RELEASE:=0
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/swig/swig.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_VERSION:=429288fa1c753dcb2d34f363e51c3b924ac173bb
+PKG_SOURCE_VERSION:=5f8768daed3e19ebe2b26447bd3a42813efc316d
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-PKG_MIRROR_HASH:=7b939b655f4a3b6d4532a58a817bed787a3971f370eb4812b8356e60a81c8a37
+#PKG_MIRROR_HASH:=7b939b655f4a3b6d4532a58a817bed787a3971f370eb4812b8356e60a81c8a37
 
 PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=GPL-3.0-or-later
