--- a/swig/Makefile
+++ b/swig/Makefile
@@ -19,7 +19,7 @@ PKG_SOURCE_URL:=https://github.com/swig/swig.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=5f8768daed3e19ebe2b26447bd3a42813efc316d
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-#PKG_MIRROR_HASH:=7b939b655f4a3b6d4532a58a817bed787a3971f370eb4812b8356e60a81c8a37
+PKG_MIRROR_HASH:=a8e2b0431cf3083a5327f6d3e983728f6ef260b75d319a39cb27ccbe50a2cf49
 
 PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=GPL-3.0-or-later
