--- a/libmraa/Makefile
+++ b/libmraa/Makefile
@@ -42,6 +42,7 @@ CMAKE_OPTIONS += \
 	-DENABLEEXAMPLES=0 \
 	-DBUILDSWIGNODE=$(if $(CONFIG_PACKAGE_libmraa-node),ON,OFF) \
 	-DSWIG_EXECUTABLE=$(STAGING_DIR_HOSTPKG)/bin/swig \
+	-DV8_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DFIRMATA=ON
 
 define Package/libmraa/Default
