--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -63,6 +63,8 @@ UPM_MODULES:= \
 CMAKE_OPTIONS += \
 	-DBUILDSWIGNODE=$(if $(CONFIG_PACKAGE_libmraa-node),ON,OFF) \
 	-DSWIG_EXECUTABLE=$(STAGING_DIR_HOSTPKG)/bin/swig \
+	-DV8_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
+	-DNODE_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DPYTHON2LIBS_FOUND=FALSE \
 	-DPYTHON2INTERP_FOUND=FALSE \
 
