libmraa: disable python2

--- a/libmraa/Makefile
+++ b/libmraa/Makefile
@@ -44,6 +44,8 @@ CMAKE_OPTIONS += \
 	-DSWIG_EXECUTABLE=$(STAGING_DIR_HOSTPKG)/bin/swig \
 	-DV8_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DNODE_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
+	-DPYTHON2LIBS_FOUND=FALSE \
+	-DPYTHON2INTERP_FOUND=FALSE \
 	-DFIRMATA=ON
 
 define Package/libmraa/Default
