--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -66,7 +66,7 @@ CMAKE_OPTIONS += \
 	-DV8_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DNODE_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DPYTHON2LIBS_FOUND=FALSE \
-	-DPYTHON2INTERP_FOUND=FALSE \
+	-DPYTHON2INTERP_FOUND=FALSE
 
 define Package/libupm/Default
   SECTION:=libs
