libupm: for node.js v14 Wnon-virtual-dtor

--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -65,6 +65,7 @@ CMAKE_OPTIONS += \
 	-DSWIG_EXECUTABLE=$(STAGING_DIR_HOSTPKG)/bin/swig \
 	-DV8_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DNODE_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
+	-DWERROR=OFF \
 	-DPYTHON2LIBS_FOUND=FALSE \
 	-DPYTHON2INTERP_FOUND=FALSE
 
