--- a/libupm/Makefile
+++ b/libupm/Makefile
@@ -66,6 +66,7 @@ CMAKE_OPTIONS += \
 	-DV8_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DNODE_ROOT_DIR=$(STAGING_DIR_HOSTPKG)/include/node \
 	-DWERROR=OFF \
+	-DCMAKE_CXX_STANDARD=14 \
 	-DPYTHON2LIBS_FOUND=FALSE \
 	-DPYTHON2INTERP_FOUND=FALSE
 
