querierd: add patch

--- a/querierd/Makefile
+++ b/querierd/Makefile
@@ -13,7 +13,7 @@ PKG_SOURCE_URL:=https://github.com/culler/querierd.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_VERSION:=ba1a1f1d9b38b4ccf72df1cc38f19a6c2c5665b8
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-#PKG_MIRROR_HASH:=
+PKG_MIRROR_HASH:=4274ba2636c4420913eb5bb2e890fc75a4bdb6622385d6b65537ca2ac1822ec9
 
 PKG_MAINTAINER:=Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=GPL-2.0
