--- a/swig/Makefile
+++ b/swig/Makefile
@@ -8,7 +8,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=swig
 PKG_VERSION:=4.1.0
-PKG_RELEASE:=0
+PKG_RELEASE:=b1
 
 #PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 #PKG_SOURCE_URL:=@SF/$(PKG_NAME)
@@ -17,9 +17,9 @@ PKG_RELEASE:=0
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE_URL:=https://github.com/swig/swig.git
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE_VERSION:=17a294cec4bb99d37ed01b99787fad483326792f
+PKG_SOURCE_VERSION:=1707d6b89ba63d4bca1fc2d841a7e879b5ed2c6e
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.xz
-PKG_MIRROR_HASH:=b911823b4b3668c63b4fa79e11a5a461eac957897e4711747b54b610700b507a
+PKG_MIRROR_HASH:=48df18d59ba91364036d5c1fcdbd51fe318d0277db60a9ac55dd0543ae3492ae
 
 PKG_MAINTAINER:=John Crispin <blogic@openwrt.org>, Hirokazu MORIKAWA <morikw2@gmail.com>
 PKG_LICENSE:=GPL-3.0-or-later
